salvando antes de mexer no banco de dados

--- a/src/frontend/obras.html
+++ b/src/frontend/obras.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <label for="cidade">Cidade</label>
+    <select id="cidade" name="cidade"></select>
+    <div id="cidades"></div>
     Obras: <div id="nomesDasObras"></div>
     <script>
 
