--- a/src/frontend/obras.html
+++ b/src/frontend/obras.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <label for="cidade">Cidade</label>
-    <select id="cidade" name="cidade"></select>
+    <select id="cidade" name="cidade"></select></br>
+    <button onclick="mostrarObrasFiltradas()">Calcular</button></br></br>
     Obras: <div id="nomesDasObras"></div>
     <script>
 
@@ -16,22 +17,24 @@
         const selectCidades = document.getElementById('cidade'); 
         let cidades = [];
         let saidaCidades = '';
+        let obras;
 
         fetch(url)
             .then((response) => {
                 return response.json();
             })
             .then((data) => {
-                let obras = data;
+                obras = data;
                 let saidaGet = '';
                 obras.map(function (obras) {
                     if (!(cidades.includes(obras.cidade))){
                         cidades.push(obras.cidade);
                     }
+                    
                     saidaGet += '<strong> ' + `${obras.nome}` + '</br>';
                 });
+
                 for (let cidade of cidades) {
-                    console.log(cidade);
                     let novaCidade = new Option(cidade, cidade);
                     selectCidades.add(novaCidade);
                 }
@@ -40,6 +43,18 @@
             .catch(function (error) {
                 console.log(error);
             });
+
+            function mostrarObrasFiltradas(){
+                let cidade = selectCidades.value;
+                console.log(cidade)
+                saidaGet = ''
+                for(let obra of obras){
+                    if (obra.cidade == cidade){
+                        saidaGet += '<strong> ' + `${obra.nome}` + '</br>';
+                        }
+                document.getElementById('nomesDasObras').innerHTML = saidaGet;
+                }
+            }
 
     </script>
 </body>
