todas as paginas conectadas pelo index

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,6 +10,10 @@
 <h1>Listagem de Obras</h1>
 <p><a href="/inserir.html">INSERIR NOVA OBRA</a></p>
 <p><a href="/obras.html">PAGINA DE OBRAS</a></p>
+<p><a href="/comoFunciona.html">PAGINA DE COMO FUNCIONA</a></p>
+<p><a href="/login.html">PAGINA DE LOGIN</a></p>
+<p><a href="/meuPerfil.html">PAGINA DE PERFIL</a></p>
+<p><a href="/ofertas.html">PAGINA DE OFERTAS</a></p>
 
 <script>
     const url = '/obras';
