--- a/src/frontend/meuPerfil.html
+++ b/src/frontend/meuPerfil.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="meuPerfil.css">
-    <script src="meuPerfil.js"></script>
+    <link rel="stylesheet" href="css/meuPerfil.css">
+    <script src="../backend/meuPerfil.js"></script>
     <title>Meu Perfil</title>
 </head>
 <body>
@@ -42,7 +42,7 @@
 
             <div class="row">
                 <div class="col-2">
-                    <img  src="Lucas_Oiveira (13).JPG" alt="">
+                    <img  src="../imgs/Lucas_Oiveira (13).JPG" alt="">
                 </div>
                 <div class="col-4" id="nome_empreiteira">
                     <div class="container">
@@ -80,7 +80,7 @@
                 <div class="row linha_obras" id="0" >
                     <div class="card_servicos offset-1 col-4">
                         <div class="row">
-                            <img class="img_obra" src="obra-mrv-campo-grande-ms-881485.jpg" alt=""> 
+                            <img class="img_obra" src="../imgs/obra-mrv-campo-grande-ms-881485.jpg" alt=""> 
                         </div>
                         
                         <div class="container informacoes_card">
@@ -92,7 +92,7 @@
                                     <div class="row">
                                         <div class="col-6 feedback">
                                             <a href="">
-                                                <img class="icon_feedback" src="feedback-do-cliente.png" alt="feedback">
+                                                <img class="icon_feedback" src="../imgs/feedback-do-cliente.png" alt="feedback">
                                             </a>
                                         </div>
                                         <!-- <div class="offset-1 col-1">
@@ -109,7 +109,7 @@
                     <div class="card_servicos offset-2 col-4">
 
                         <div class="row">
-                            <img class="img_obra" src="obra-mrv-campo-grande-ms-881485.jpg" alt=""> 
+                            <img class="img_obra" src="../imgs/obra-mrv-campo-grande-ms-881485.jpg" alt=""> 
                         </div>
                         
                         <div class="container informacoes_card">
@@ -121,7 +121,7 @@
                                     <div class="row">
                                         <div class="col-6 feedback">
                                             <a href="">
-                                                <img class="icon_feedback" src="feedback-do-cliente.png" alt="feedback">
+                                                <img class="icon_feedback" src="../imgs/feedback-do-cliente.png" alt="feedback">
                                             </a>
                                         </div>
                                         <!-- <div class="offset-1 col-1">
